src/objects/Convertopage_Planner__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Convertopage Planner</relationshipLabel>
        <relationshipName>Convertopage_Planner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converto_password__c</fullName>
        <label>Converto initial password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converto_username__c</fullName>
        <label>Converto username</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_who_yr_main_target_audience_is__c</fullName>
        <inlineHelpText>Age, education levels and other demographics</inlineHelpText>
        <label>Describe who yr main target audience is</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_you_would_like_to_display_an_location__c</fullName>
        <label>If you would like to display an location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_any_specific_form_data_you_wou2__c</fullName>
        <inlineHelpText>Example: Make sure phone number is required</inlineHelpText>
        <label>Secondary CTA specific form data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_any_specific_form_data_you_woul__c</fullName>
        <inlineHelpText>Example: Select a Date and time, List 4 colours to choose from (red, green, blue, yellow)</inlineHelpText>
        <label>Primary CTA specific form data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_content_available_already_Wher__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>text, photos, contact details etc</inlineHelpText>
        <label>Is there content available already?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_any_direct_competitor_s_websites__c</fullName>
        <inlineHelpText>Example: www.companyname.com.au</inlineHelpText>
        <label>List any direct competitor site URLs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_any_specific_selling_points_related__c</fullName>
        <inlineHelpText>Provide a brief description of each USP where applicable
Example: Free Wedding album with all wedding photo booth hire</inlineHelpText>
        <label>List any specific selling points related</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Please_enter_GTM_if_required__c</fullName>
        <inlineHelpText>Google Tag Manager code.</inlineHelpText>
        <label>Enter GTM code if required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_enter_adwords_conversion_tracking__c</fullName>
        <label>Enter adwords conv tracking code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_enter_any_addition_notes__c</fullName>
        <label>Enter any additional notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_list_your_unique_selling_points__c</fullName>
        <inlineHelpText>Provide a brief description of each USP where applicable
Example: 
Quality Workmanship: We take pride in each and every job and make sure all work passes our quality check process.
Attention to Detail: Our team have a keen eye on the small details.</inlineHelpText>
        <label>List 4 key selling points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Provide_a_brief_description_about_the_bu__c</fullName>
        <inlineHelpText>Example: We&apos;re investing in our networks. In our staff and in sustainability. At Company, we’re invested in giving Australians choice and keeping you connected. With over 10 years in the industry we are always focused on keeping our clients happy.</inlineHelpText>
        <label>Provide a brief description about the bu</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provide_a_short_description_of_this_prod__c</fullName>
        <inlineHelpText>Example: Hiring a photobooth in Melbourne has never been easier and more affordable. We understand the importance of your special event and promise to create a unique experience that reflects your vision.</inlineHelpText>
        <label>Provide a single sentence tagline descri</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provide_up_to_3_testimonials_if_availabl__c</fullName>
        <label>Provide up to 3 testimonials if availabl</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_ABN_to_use_to_register_free_domain__c</fullName>
        <inlineHelpText>This is only required if choosing an .au domain
Please check the ABN validates here: http://abr.business.gov.au/</inlineHelpText>
        <label>What ABN to use to register free domain?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_colours_do_you_think_should_be_used__c</fullName>
        <inlineHelpText>If no colours are preferred these will be chosen for you. If revisions to colours are requested this could result in additional charges.</inlineHelpText>
        <label>What colours do you think should be used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_domain_name_you_like_to_use_for_Con__c</fullName>
        <inlineHelpText>for the convertopages</inlineHelpText>
        <label>What domain name you would like to use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_email_add_do_you_want_your_lead__c</fullName>
        <label>What email address should leads go to</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>What_is_the_current_website_URL_for_your__c</fullName>
        <inlineHelpText>Example: www.companyname.com.au</inlineHelpText>
        <label>What is the current website URL for your</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_is_the_main_website_title__c</fullName>
        <inlineHelpText>Example: Wedding photo booth hire in Melbourne</inlineHelpText>
        <label>What is the main website title?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_phone_number_should_we_use_on_the_l__c</fullName>
        <label>What phone number should we use on the l</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>What_should_be_the_primary_call_to_actio__c</fullName>
        <inlineHelpText>Example: Book a Booth</inlineHelpText>
        <label>What should be the primary call to actio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_is_the_content__c</fullName>
        <label>Where is the content?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_Converto_Layout_Would_The_Client_W__c</fullName>
        <description>This is the description. Example: Hiring a photobooth in Melbourne has never been easier and more affordable. We understand the importance of your special event and promise to create a unique experience that reflects your vision.</description>
        <inlineHelpText>This is the help text. Example: Hiring a photobooth in Melbourne has never been easier and more affordable. We understand the importance of your special event and promise to create a unique experience that reflects your vision.</inlineHelpText>
        <label>Which converto layout client want to use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_products_or_services_do_you_want_t__c</fullName>
        <label>Provide a full description of the produc</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Why_do_you_think_ppl_will_visit_your_con__c</fullName>
        <inlineHelpText>what are they looking for?</inlineHelpText>
        <label>Why you think ppl&apos;ll visit your converto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Would_should_be_the_secondary_call_to_ac__c</fullName>
        <inlineHelpText>Example: Contact Us</inlineHelpText>
        <label>What should be the secondary call to act</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Convertopage Planner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP - {00000}</displayFormat>
        <label>Convertopage Planner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convertopage Planner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>